--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.1,500.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.1,000.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.1,300.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -211,7 +211,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.2,000.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -243,7 +243,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.8,00.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -275,7 +275,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.1,000.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -307,7 +307,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.3,000.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
@@ -339,7 +339,7 @@
           <div class="line"></div>
           <div class="price">
             <p>RS.2,000.00</p>
-            <div class="plusIcon"></div>
+            <div class="plusIcon" onclick="addcart()"></div>
           </div>
         </div>
       </div>
