--- a/item.html
+++ b/item.html
@@ -19,28 +19,28 @@
     <div class="container4">
       <!-- Sidebar section start -->
       <div class="sidebar1">
-        <div class="item1">
+        <div class="item1" onclick="myFunc()">
           <div class="icon"></div>
           <div class="hide"></div>
           <div class="name"><p>Home</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc1()">
           <div class="icon1"></div>
           <div class="name"><p>Order</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc2()">
           <div class="icon2"></div>
           <div class="name"><p>Customer</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc3()">
           <div class="icon3"></div>
           <div class="name"><p>Report</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc4()">
           <div class="icon4"></div>
           <div class="name"><p>Item</p></div>
         </div>
@@ -193,5 +193,6 @@
       </div>
     </div>
     <!-- Cotainer section end -->
+    <script src="JS/script.js"></script>
   </body>
 </html>
