--- a/order.html
+++ b/order.html
@@ -24,27 +24,27 @@
     <div class="container">
       <!-- side bar section start -->
       <div class="sidebar">
-        <div class="item1">
+        <div class="item1" onclick="myFunc()">
           <div class="icon"></div>
           <div class="name"><p>Home</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc1()">
           <div class="icon1"></div>
           <div class="name"><p>Order</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc2()">
           <div class="icon2"></div>
           <div class="name"><p>Customer</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc3()">
           <div class="icon3"></div>
           <div class="name"><p>Report</p></div>
         </div>
 
-        <div class="item1">
+        <div class="item1" onclick="myFunc4()">
           <div class="icon4"></div>
           <div class="name"><p>Item</p></div>
         </div>
@@ -81,5 +81,7 @@
         </div>
       </div>
     </div>
+
+    <script src="JS/script.js"></script>
   </body>
 </html>
