--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <!-- Search box end -->
     </div>
     <!-- Item Card section start -->
-    <div class="itemCardRow">
-      <div class="itemCard">
+    <div class="itemCardRow" id="itemCardRow">
+      <div class="itemCard" onclick="AddCart('one')">
         <div class="cardPic">
           <div class="CardPicItem" id="one"></div>
         </div>
@@ -122,7 +122,7 @@
 
       <div class="itemCard">
         <div class="cardPic">
-          <div class="CardPicItem1"></div>
+          <div class="CardPicItem1" id="ONE"></div>
         </div>
 
         <div class="cardDetails">
